--- a/app/web/nginx.conf
+++ b/app/web/nginx.conf
@@ -2,12 +2,12 @@ events{}
 http {
     include /etc/nginx/mime.types;
     server {
-        listen 80;
+        listen 8080;
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
         location / {
-            try_files $uri $uri/ /index.html;
+            try_files $uri$args $uri$args/ /index.html;
         }
     }
 }
