--- a/app/web/package.json
+++ b/app/web/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 8080",
+    "start": "ng serve --port 8080 --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "watch": "ng build --port 8080 --host 0.0.0.0 --disable-host-check --watch --configuration development"
   },
   "private": true,
   "dependencies": {
