--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - MONGO_TODO_DB=TodoDb
       - MONGO_MAX_POOL_SIZE=10
       - MONGO_CONNECTION_TIMEOUT=20
-      - JAEGER_AGENT_HOST=jaeger
+      - JAEGER_AGENT_HOST=${JAEGER_AGENT_HOST:-localhost}
       - JAEGER_AGENT_PORT=6831
       - JAEGER_SAMPLER_PARAM=1
       - JAEGER_SAMPLER_TYPE=probabilistic
